added company image loading
