# src/main/kotlin/ru/kotleteri/controllers/company/AuthCompanyController.kt
@@ -6,6 +6,7 @@ import io.ktor.server.request.*
 import io.ktor.server.response.*
 import ru.kotleteri.controllers.AbstractAuthController
 import ru.kotleteri.data.models.inout.ErrorResponse
+import ru.kotleteri.integrations.objectstorage.ImageLoading
 
 class AuthCompanyController(call: ApplicationCall): AbstractAuthController(call) {
     suspend fun setPicture(){
@@ -14,9 +15,36 @@ class AuthCompanyController(call: ApplicationCall): AbstractAuthController(call)
             return
         }
 
-        val imageStream = call.receiveStream()
+        try {
+            val imageBytes = call.receiveStream().readBytes()
+            ImageLoading.saveImageToS3(id.toString(), imageBytes)
+
+            call.respond(HttpStatusCode.OK)
+
+        } catch (e: Exception){
+            call.respond(HttpStatusCode.BadRequest, ErrorResponse("Something went wrong"))
+            return
+        }
+    }
+
+    suspend fun getPicture(){
+        if (isClient){
+            call.respond(HttpStatusCode.OK, ErrorResponse("You are not company"))
+            return
+        }
 
         try {
+            val stream = ImageLoading.getImageFromS3(id.toString())
+            if (stream == null){
+                call.respond(HttpStatusCode.NotFound, ErrorResponse("Picture not found"))
+                return
+            }
+
+            call.respondBytes(
+                stream.readBytes(),
+                ContentType.Image.JPEG,
+                HttpStatusCode.OK
+            )
 
         } catch (e: Exception){
             call.respond(HttpStatusCode.BadRequest, ErrorResponse("Something went wrong"))
